# ElfRadio

./: .cursorrules  .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  配色CSS代码.txt
config/: default.toml
crates/elfradio_ai/: Cargo.toml
crates/elfradio_ai/src/: factory.rs  google.rs  lib.rs  openai_compatible.rs  stepfun.rs
crates/elfradio_api/: Cargo.toml
crates/elfradio_api/src/: error.rs  lib.rs  test_handlers.rs
crates/elfradio_api/src/handlers/: task.rs  test_handlers.rs
crates/elfradio_app/: Cargo.toml
crates/elfradio_app/src/: main.rs
crates/elfradio_aux_client/: Cargo.toml
crates/elfradio_aux_client/src/: aliyun.rs  lib.rs
crates/elfradio_config/: Cargo.toml
crates/elfradio_config/src/: lib.rs
crates/elfradio_core/: Cargo.toml
crates/elfradio_core/src/: audio_processor.rs  error.rs  lib.rs  logging.rs  network_monitor.rs  processing.rs  state.rs  task_manager.rs  tx_processor.rs
crates/elfradio_db/: Cargo.toml
crates/elfradio_db/src/: lib.rs
crates/elfradio_dsp/: Cargo.toml
crates/elfradio_dsp/src/: cw.rs  error.rs  lib.rs  sstv.rs  vad.rs
crates/elfradio_hardware/: Cargo.toml
crates/elfradio_hardware/src/: lib.rs
crates/elfradio_types/: Cargo.toml
crates/elfradio_types/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: ChatView.tsx  LogDisplay.tsx  MessageInput.tsx  SettingsNavItem.tsx  Sidebar.tsx  StatusBar.tsx  StatusIndicatorDot.tsx
frontend/src/lib/services/: apiService.ts  websocketService.ts
frontend/src/lib/store/: authStore.ts  backendStatusStore.ts  chatStore.ts  logStore.ts  systemStatusStore.ts  taskStore.ts  themeContext.tsx  themeStore.ts  websocketStore.ts
frontend/src/lib/utils/: stringUtils.ts
frontend/src/pages/: ContactsPage.tsx  EmergencyPage.tsx  GeneralCallTaskPage.tsx  HomePage.tsx  MeshtasticPage.tsx  SDRServerPage.tsx  SettingsPage.tsx  SimulatedQSOPage.tsx
