[package]
name = "elfradio_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
elfradio_types = { path = "../elfradio_types" }
elfradio_config = { path = "../elfradio_config" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-openai = "0.20"
base64 = "0.21"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
