[package]
name = "elfradio_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
tracing = "0.1.41"
elfradio_types = { path = "../elfradio_types" }
elfradio_config = { path = "../elfradio_config" }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-openai = "0.28.1"
base64 = "0.22.1"
bytes = "1.10.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
