[package]
name = "elfradio_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["ws", "macros", "json"] }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
elfradio_types = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
elfradio_core = { workspace = true }
chrono = { workspace = true }
elfradio_db = { workspace = true }
sqlx = { workspace = true }
elfradio_config = { workspace = true }
elfradio_ai = { path = "../elfradio_ai" }
base64 = "0.21"
