# Cargo.toml for the main application crate

[package]
name = "elfradio_app"    # The name of this crate
version = "0.1.0"
edition = "2024"         # Or "2021" if your project uses that edition

[dependencies]
# Dependencies needed directly by main.rs
elfradio_core = { workspace = true }
elfradio_hardware = { workspace = true }
elfradio_types = { workspace = true }
elfradio_dsp = { workspace = true }
tokio = { workspace = true }
elfradio_config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
elfradio_api = { workspace = true }
cpal = "0.15.3"
webrtc-vad = "0.4.0"
sqlx = { workspace = true }
elfradio_ai = { workspace = true }
elfradio_db = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
elfradio_aux_client = { workspace = true }
