[package]
name = "elfradio_core"
version = "0.1.0"
edition = "2021"

[dependencies]
elfradio_dsp = { workspace = true }
elfradio_types = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "time", "fs"] }
tracing = { workspace = true }
webrtc-vad = "0.4.0"
elfradio_ai = { workspace = true }
elfradio_config = { workspace = true }
thiserror = { workspace = true }
hound = "3.5.1"
uuid = { workspace = true }
elfradio_hardware = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
cpal = "0.15.3"
elfradio_db = { workspace = true }
rubato = "0.16.2"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { workspace = true }
elfradio_types = { workspace = true }
elfradio_ai = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
assert_matches = "1.5"
async-trait = { workspace = true }
tempfile = "3.19.1"
httpmock = "0.7.0"
