[package]
name = "elfradio_db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono", "uuid"] }
thiserror = "1.0"
tracing = "0.1"
elfradio_types = { path = "../elfradio_types" }
tokio = { version = "1", features = ["fs"] }
directories = "5"
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
elfradio_types = { path = "../elfradio_types" }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tempfile = "3"
assert_matches = "1.5"
