[package]
name = "elfradio_db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid", "json"] }
thiserror = { workspace = true }
tracing = { workspace = true }
elfradio_types = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
directories = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true }
elfradio_types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
assert_matches = "1.5"
