[package]
name = "elfradio_types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
tokio = { version = "1", features = ["sync"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
