[package]
name = "elfradio_types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
